--- a/graphics/hugin-app/Portfile
+++ b/graphics/hugin-app/Portfile
@@ -11,7 +11,7 @@ PortGroup               conflicts_build 1.0
 
 name                    hugin-app
 version                 2022.0.0
-revision                5
+revision                6
 set branch              [join [lrange [split ${version} .] 0 1] .]
 categories              graphics
 maintainers             {mcalhoun @MarcusCalhoun-Lopez} {mascguy @mascguy} openmaintainer
@@ -33,7 +33,12 @@ use_bzip2               yes
 compiler.cxx_standard   2011
 
 perl5.branches          5.34
-wxWidgets.use           wxWidgets-3.0-cxx11
+# use wxWidget-3.2 on macOS Mojave (10.14) and later for dark mode support
+if {${os.platform} eq "darwin" && ${os.major} >= 18} {
+    wxWidgets.use           wxWidgets-3.2
+} else {
+    wxWidgets.use           wxWidgets-3.0-cxx11
+}
 boost.version           1.78
 
 checksums               rmd160  50485c0a6fe10dbcf07f3d4e10cdb3ada291925e \
