poppler: fix library paths in generated typelib file
Specify explicit paths to dynamic libraries in install prefix in call
to g-ir-compiler to be included in generated typelib files

--- a/graphics/poppler-devel/Portfile
+++ b/graphics/poppler-devel/Portfile
@@ -9,7 +9,7 @@ name                poppler-devel
 conflicts           poppler xpdf-tools
 set my_name         poppler
 version             24.01.0
-revision            0
+revision            1
 
 categories          graphics
 license             GPL-2+
@@ -75,6 +75,9 @@ patchfiles-append   patch-cmake_modules_PopplerMacros.cmake.diff
 # fix header include path ordering for gobject-introspection call to
 # be source / build first, then system, as best can be determined
 patchfiles-append   patch-glib_CMakeFiles.txt-fix-include-ordering.diff
+
+# fix library paths in generated typelib file
+patchfiles-append   patch-glib_CMakeFiles.txt-fix-lib-location.diff
 
 if {${configure.compiler} eq "macports-gcc-7"} {
     patchfiles-append \
