ghc: Update to version 9.6.4

--- a/lang/ghc/Portfile
+++ b/lang/ghc/Portfile
@@ -6,7 +6,7 @@ PortGroup           compiler_blacklist_versions 1.0
 PortGroup           legacysupport 1.1
 
 name                ghc
-version             9.6.3
+version             9.6.4
 revision            0
 categories          lang haskell
 maintainers         {ieee.org:s.t.smith @essandess} openmaintainer
@@ -60,33 +60,41 @@ set ghc_distname    ${distname}-${ghc_build_arch}-apple-darwin
 
 # set build_arch by hand on arm64/x86_64 systems to get x86_64/arm64 checksums
 # sudo port -d checksum ghc-prebuilt os.arch=arm build_arch=arm64
+# sudo port -d checksum ghc-prebuilt os.arch=i386 build_arch=x86_64
 # run `port clean --all ghc-prebuilt` afterwards
 if {${build_arch} eq {arm64}} {
     checksums       ${ghc_distname}${extract.suffix} \
-                    rmd160  5cfe04221c0d582e762a3ef669ae99f6a4e73987 \
-                    sha256  e1cdf458926b2eaf52d2a8287d99a965040ff9051171f5c3b7467049cf0eb213 \
-                    size    204073900
+                    rmd160  40add277c78cccea2f7ccbfe4dc06b93b020fbd9 \
+                    sha256  25affc9ceb6f2032706ec1b4b7ba5d14bd34df3b5223d8060f210aece25feea9 \
+                    size    203868728
 } elseif {${build_arch} eq {x86_64}} {
     checksums       ${ghc_distname}${extract.suffix} \
-                    rmd160  fbdf7767b097504d18ed734e59eab5be273f91d0 \
-                    sha256  dde46118ab8388fb1066312c097123e93b1dcf6ae366e3370f88ea456382c9db \
-                    size    196017596
+                    rmd160  76e9020d4829c5550a5637ec82fbebaf04996a2b \
+                    sha256  b897cbd156690f4e6cc4400f6b9465d610ea228d8527f8bd501210d1b93a4eab \
+                    size    196195572
 }
 set ghc_source_checksums [list \
                     ${distname}-src${extract.suffix} \
-                    rmd160  34d6472ace7a37d4f75d6b2e0c5719c6fe122b57 \
-                    sha256  dfcde67b4aa550a0b8a1a9bb8105835dc999fad6397cce33d72fd55d21eb77f5 \
-                    size    29346888 \
+                    rmd160  f780fb486a5159caccde12fd8c52da38f6b7f17b \
+                    sha256  10bf25b8b07174fdd9868b5c0c56c17c0ef1edcb6247b4b864be933651bfd4c0 \
+                    size    29451856 \
                     ]
 set ghc_testsuite_checksums [list \
                     ${distname}-testsuite${extract.suffix} \
-                    rmd160  1da2bc1c2720c6b030ad86904f84d82c7e6ee6ab \
-                    sha256  b0f92579288adf2320206627248d80d2abfe0e1b9ad2a22cf8f889bbe6806448 \
-                    size    7072964 \
+                    rmd160  f3070f01a929c6ce90865a24023c9f5b02209c17 \
+                    sha256  6e13282fbebffdbfa0a49889437444c9a90cfe5760c47969cd4245854c338d73 \
+                    size    7075820 \
                     ]
 
-# https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xb202264020068bfb
-set gpg_keyid       33C3A599DB85EA9B8BAA1866B202264020068BFB
+# gpg --list-packets ${distfiles}/${distname}-src${extract.suffix}.sig
+# https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x588764FBE22D19C4
+set gpg_keyid       588764FBE22D19C4
+
+# relative paths to ${prefix}
+set ghc_libdir ${prefix}/lib/${name}-${version}
+
+# LlvmMaxVersion=16 from ./configure.ac; must be less than actual llvm version
+set ghc_llvm_version  15
 
 if {${name} eq ${subport}} {
     PortGroup       haskell_cabal 1.0
@@ -96,6 +104,9 @@ if {${name} eq ${subport}} {
     haskell_cabal.env \
                     "CABAL_CONFIG=${haskell_cabal.cabal_root}/config" \
                     "GHC=${haskell_cabal.cabal_root}/bin/ghc" \
+                    "LD=${prefix}/bin/ld" \
+                    "LLC=${prefix}/bin/llc-mp-${ghc_llvm_version}" \
+                    "OPT=${prefix}/bin/opt-mp-${ghc_llvm_version}" \
                     "PATH=${workpath}/bin:${haskell_cabal.cabal_root}/bin:$env(PATH)"
 
     # https://gitlab.haskell.org/ghc/ghc/-/issues/23477
@@ -116,7 +127,10 @@ if {${name} eq ${subport}} {
                     "CPPFLAGS=${configure.cppflags}" \
                     CXX=${configure.cxx} \
                     "CXXFLAGS=${configure.cxxflags}" \
-                    "LDFLAGS=${configure.ldflags}"
+                    "LDFLAGS=${configure.ldflags}" \
+                    "LD=${prefix}/bin/ld" \
+                    "LLC=${prefix}/bin/llc-mp-${ghc_llvm_version}" \
+                    "OPT=${prefix}/bin/opt-mp-${ghc_llvm_version}"
     }
 
     configure.cmd   ./configure
@@ -161,7 +175,7 @@ if {${name} eq ${subport}} {
                     ${distname}-testsuite${extract.suffix}.sig
         checksums-append \
                     ${distname}-testsuite${extract.suffix}.sig \
-                    size    592
+                    size    438
 
         post-checksum {
             gpg_verify.verify_gpg_signature \
@@ -170,8 +184,6 @@ if {${name} eq ${subport}} {
                     ${distpath}/${distname}-testsuite${extract.suffix}
         }
     }
-
-    use_xcode       yes
 
     # Build requires C11
     compiler.c_standard 2011
@@ -192,7 +204,7 @@ if {${name} eq ${subport}} {
                     port:automake \
                     port:bash \
                     port:bzip2 \
-                    port:cctools \
+                    port:file \
                     port:gzip \
                     port:hadrian \
                     port:happy \
@@ -206,8 +218,11 @@ if {${name} eq ${subport}} {
                     port:xz
 
     depends_lib-append  \
+                    port:cctools \
                     port:gmp \
+                    port:ld64 \
                     port:libiconv \
+                    port:llvm-${ghc_llvm_version} \
                     port:ncurses
     
     # build depends upon these x86_64 binaries
@@ -282,6 +297,10 @@ if {${name} eq ${subport}} {
         }
     }
 
+    haskell_cabal.bindirs-append \
+                    ${destroot}${prefix}/lib/${subport}-${version}/bin \
+                    ${destroot}${prefix}/lib/${subport}-${version}/lib/bin
+    
     # documentation
     post-destroot {
         xinstall -W ${filespath} -m 0644 ./ghci.conf ${destroot}${prefix}/etc
@@ -298,7 +317,7 @@ if {${name} eq ${subport}} {
         # delete any destroot path appearing in text files
         fs-traverse f ${destroot}${prefix} {
             if {[file isfile ${f}] && [file type ${f}] eq {file}} {
-                if {[string match "text/*" [lindex [exec /usr/bin/file --mime-type ${f}] end]]} {
+                if {[string match "text/*" [lindex [exec file --mime-type ${f}] end]]} {
                     reinplace -q "s|${destroot}||g" ${f}
                 }
             }
@@ -340,7 +359,7 @@ subport ghc-prebuilt {
                     ${ghc_distname}${extract.suffix}.sig
         checksums-append \
                     ${ghc_distname}${extract.suffix}.sig \
-                    size    592
+                    size    438
 
         post-checksum {
             gpg_verify.verify_gpg_signature \
@@ -350,10 +369,16 @@ subport ghc-prebuilt {
         }
     }
 
+    depends_build-append \
+                    port:file
+
+    depends_lib-append \
+                    port:cctools \
+                    port:ld64 \
+                    port:llvm-${ghc_llvm_version}
+
     extract.only    ${ghc_distname}${extract.suffix}
-if {[exists extract.rename]} {
     extract.rename  yes
-}
 
     # Build requires C11
     compiler.c_standard 2011
@@ -363,6 +388,11 @@ if {[exists extract.rename]} {
 
     distname        ${name}-${ghc_version}
 
+    configure.env-append \
+                    "LD=${prefix}/bin/ld" \
+                    "LLC=${prefix}/bin/llc-mp-${ghc_llvm_version}" \
+                    "OPT=${prefix}/bin/opt-mp-${ghc_llvm_version}"
+
     build           {}
 
     post-destroot {
@@ -371,7 +401,7 @@ if {[exists extract.rename]} {
         set docdir ${prefix}/share/doc/${distname}
         foreach f [glob ${destroot}${prefix}/bin/*] {
             if {[file isfile ${f}] && [file type ${f}] eq {file}
-                && [string match "text/*" [lindex [exec /usr/bin/file --mime-type ${f}] end]]} {
+                && [string match "text/*" [lindex [exec file --mime-type ${f}] end]]} {
                 reinplace -E -q \
                     "s|^(exeprog=\".+)(\")\$|\\1-prebuilt\\2|" \
                     ${f}
@@ -398,7 +428,7 @@ subport hadrian {
     # find ${worksrcpath} -type f -exec egrep -E -o '"pkg-name":"shake","pkg-version":"[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+"' {} ';'
     # revbump if the version is unchanged
     version         0.19.7
-    revision        1
+    revision        2
 
     distname        ${name}-${ghc_version}
     distfiles       [lindex ${ghc_source_checksums} 0]
