--- a/sysutils/htop/Portfile
+++ b/sysutils/htop/Portfile
@@ -5,7 +5,7 @@ PortGroup           github 1.0
 PortGroup           legacysupport 1.1
 
 github.setup        htop-dev htop 3.3.0
-revision            0
+revision            1
 epoch               1
 
 checksums           rmd160  32f836bc4016f2ebf6b2332396993baad5c69ee6 \
@@ -13,7 +13,6 @@ checksums           rmd160  32f836bc4016f2ebf6b2332396993baad5c69ee6 \
                     size    406099
 
 categories          sysutils
-platforms           darwin
 maintainers         {cal @neverpanic} openmaintainer
 license             GPL-2
 
@@ -22,12 +21,18 @@ long_description    ${name} is {*}${description} systems. It aims to be a better
 
 homepage            https://htop.dev
 
-depends_build       port:autoconf \
+depends_build-append \
+                    port:autoconf \
                     port:automake \
                     port:libtool \
                     port:pkgconfig
 
-depends_lib         port:ncurses
+depends_lib-append  port:ncurses
+
+# https://github.com/htop-dev/htop/pull/1381
+patchfiles-append   0001-darwin-Platform.c-use-mach-port.h.patch
+# https://github.com/htop-dev/htop/pull/1383
+patchfiles-append   0002-darwin-PlatformHelpers-fix-CPU-detection-for-PowerPC.patch
 
 pre-configure {
     system -W ${worksrcpath} "sh autogen.sh"
