py-Faker: drop py37 subport

--- a/python/py-Faker/Portfile
+++ b/python/py-Faker/Portfile
@@ -22,12 +22,9 @@ checksums           rmd160  87406003a8349de26c4f6e804f1f830480843822 \
                     sha256  b7f76bb1b2ac4cdc54442d955e36e477c387000f31ce46887fb9722a041be60b \
                     size    1708228
 
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 if {${name} ne ${subport}} {
-    depends_build-append \
-                    port:py${python.version}-setuptools
-
     depends_run-append \
                     port:py${python.version}-Pillow \
                     port:py${python.version}-dateutil \
