--- a/python/py-altair/Portfile
+++ b/python/py-altair/Portfile
@@ -12,8 +12,7 @@ license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     37 38 39 310 311
-python.pep517       yes
+python.versions     38 39 310 311
 python.pep517_backend hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
@@ -33,10 +32,6 @@ if {${name} ne ${subport}} {
                         port:py${python.version}-numpy \
                         port:py${python.version}-pandas \
                         port:py${python.version}-toolz
-
-    if {${python.version} < 38} {
-        depends_lib-append  port:py${python.version}-importlib-metadata
-    }
 
     if {${python.version} < 311} {
         depends_lib-append  port:py${python.version}-typing_extensions
