--- a/python/py-ansicolor/Portfile
+++ b/python/py-ansicolor/Portfile
@@ -5,6 +5,8 @@ PortGroup           python 1.0
 
 name                py-ansicolor
 version             0.3.2
+revision            0
+
 categories-append   devel
 license             Apache-2
 platforms           {darwin any}
@@ -13,8 +15,7 @@ maintainers         {@gpanders gpanders.com:greg} \
                     openmaintainer
 
 description         A library to produce ANSI color output
-long_description    A library to produce ANSI color output \
-                    and colored highlighting and diffing.
+long_description    {*}${description} and colored highlighting and diffing.
 
 homepage            https://github.com/numerodix/ansicolor
 
@@ -22,8 +23,4 @@ checksums           rmd160  7b54e765e294c2ab6f178958342b39bbd0824646 \
                     sha256  3b840a6b1184b5f1568635b1adab28147947522707d41ceba02d5ed0a0877279 \
                     size    9725
 
-python.versions     37 38 39
-
-if {${name} ne ${subport}} {
-    depends_build-append port:py${python.version}-setuptools
-}
+python.versions     38 39
