py-psutil: Fix build on OS X < 10.9

--- a/python/py-psutil/Portfile
+++ b/python/py-psutil/Portfile
@@ -30,4 +30,5 @@ long_description    psutil is a module providing an interface for retrieving \
 homepage            https://github.com/giampaolo/psutil
 
 patchfiles          CoreFoundation.patch \
-                    u_char.patch
+                    u_char.patch \
+                    struct-sockaddr.patch
