--- a/science/opencascade/Portfile
+++ b/science/opencascade/Portfile
@@ -8,7 +8,6 @@ name                        opencascade
 version                     7.7.0
 revision                    2
 categories                  science
-platforms                   darwin
 license                     LGPL-2
 maintainers                 {mcalhoun @MarcusCalhoun-Lopez} openmaintainer
 description                 Development platform for CAD/CAE, 3D surface/solid modeling and data exchange
@@ -25,7 +24,8 @@ checksums                   rmd160  2cd1b528d2f1fb40bd9b0f2646ddea3fef0d3733 \
                             size    48391263
 
 patchfiles-append           patch-CMakeLists.txt.diff \
-                            patch-env.sh.in.diff
+                            patch-env.sh.in.diff \
+                            patch-ViewerTest_CmdParser.cxx.diff
 
 compiler.cxx_standard       2011
 configure.args-append       -DCMAKE_CXX_STANDARD=11 \
@@ -52,6 +52,19 @@ configure.args-append       -DUSE_FREEIMAGE=ON \
 if {${os.major} < 12} {
     configure.cxxflags-append \
                             -F/System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks
+}
+
+if {[string match *gcc* ${configure.compiler}]} {
+    # OpenGl_GlFunctions.cxx: error: invalid conversion from 'void (*)(GLenum, GLint, GLenum, GLsizei, GLsizei, GLint, GLenum, GLenum, const GLvoid*)'
+    # {aka 'void (*)(unsigned int, int, unsigned int, int, int, int, unsigned int, unsigned int, const void*)'} to 'OpenGl_GlFunctions::glTexImage2D_t'
+    # {aka 'void (*)(unsigned int, int, int, int, int, int, unsigned int, unsigned int, const void*)'} [-fpermissive]
+    configure.cxxflags-append \
+                            -fpermissive
+    if {${configure.build_arch} in [list arm i386 ppc]} {
+        # Undefined symbols: "___atomic_fetch_add_8"
+        configure.ldflags-append \
+                            -latomic
+    }
 }
 
 variant docs description {Build and install documentation} {
