--- a/science/mmg/Portfile
+++ b/science/mmg/Portfile
@@ -1,27 +1,27 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem              1.0
-PortGroup               github 1.0
 PortGroup               cmake  1.1
+PortGroup               github 1.0
 
 github.setup            MmgTools mmg 5.4.3 v
 revision                3
 categories              science math
-platforms               darwin
 maintainers             {mcalhoun @MarcusCalhoun-Lopez} openmaintainer
 license                 LGPL-3+
 homepage                https://www.mmgtools.org
 
 description             An open source software for simplicial remeshing
 
-long_description        mmg is an open source software for bidimensional and tridimensional surface and volume remeshing
+long_description        ${name} is an open source software for bidimensional \
+                        and tridimensional surface and volume remeshing.
 
 checksums               rmd160  a19476968ef4047a924c4ed78405d3eb08ce50ab \
                         sha256  cb42a562baa20b46e627a7ef7aad067ed2a31d8601ce9e0a3ee62d2b27513dcf \
                         size    10216556
 
-depends_lib-append      port:zlib \
-                        port:scotch
+depends_lib-append      port:scotch \
+                        port:zlib
 
 configure.args-append   -DBUILD_SHARED_LIBS=YES
 
