ci: change macos build matrix
- remove deprecated macos-11 builder
- add new arm64 macos-14 builder
- change MACPORTS_VERSION to 2.9.1 so job will succeed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths-ignore:
-      - '.github/**'
+      - ".github/**"
   push:
     branches-ignore:
       - master
@@ -23,7 +23,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-11, macos-12, macos-13]
+        os: [macos-12, macos-13, macos-14]
 
     steps:
       - name: Checkout ports
