tmux: overwrite config dir
tmux-devel: update to 20240122-ea7136f

--- a/sysutils/tmux/Portfile
+++ b/sysutils/tmux/Portfile
@@ -9,13 +9,13 @@ legacysupport.newest_darwin_requires_legacy 8
 
 github.setup    tmux tmux 3.3a
 if {${subport} eq ${name}} {
-    revision        3
+    revision        4
     conflicts       tmux-devel
 }
 subport tmux-devel {
-    github.setup    tmux tmux 96ad8280b28283eb01e7789f5bafd2e1f6cde139
-    version         20210610-[string range ${github.version} 0 6]
-    revision        3
+    github.setup    tmux tmux ea7136fb838a2831d38e11ca94094cea61a01e3a
+    version         20240122-[string range ${github.version} 0 6]
+    revision        0
     conflicts       tmux
 }
 categories      sysutils
@@ -37,14 +37,11 @@ if {${subport} eq ${name}} {
     checksums               rmd160  be6c4fd40bc0c4e77e296639c15e3f009bd0396a \
                             sha256  e4fd347843bd0772c4f48d6dde625b0b109b7a380ff15db21e97c11a4dcdf93f \
                             size    677448
-
-    depends_lib-append      port:libutf8proc
-    configure.args-append   --enable-utf8proc
 }
 subport tmux-devel {
-    checksums               rmd160  b4ef42164a1bf711db984242ed36bc97f2297f53 \
-                            sha256  6ad5fbc3d0adeaf2cfaddb0c8cd75276b623fbc77da3fabf66796cd3c47e27be \
-                            size    819238
+    checksums               rmd160  2e2250d560ea674f906154f6e8afd1fa50977573 \
+                            sha256  e69cca360e98fc45bc510ea4364c59e52c90fe31ae0aa079001d01cda5a714f5 \
+                            size    1037675
 
     use_autoreconf          yes
     autoreconf.cmd          ./autogen.sh
@@ -58,6 +55,11 @@ subport tmux-devel {
         reinplace -E $reinplace_cmd ${worksrcpath}/configure.ac
     }
 }
+
+depends_lib-append          port:libutf8proc
+configure.args-append       --enable-utf8proc \
+                            --prefix=${prefix} \
+                            --sysconfdir=${prefix}/etc
 
 platform darwin {
     if {${os.major} < 23} {
