--- a/sysutils/netdata/Portfile
+++ b/sysutils/netdata/Portfile
@@ -1,16 +1,18 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem              1.0
-PortGroup               github 1.0
-PortGroup               legacysupport 1.1
+PortGroup               github          1.0
+PortGroup               legacysupport   1.1
 
-github.setup            netdata netdata 1.29.3 v
-revision                2
-
+github.setup            netdata netdata 1.44.1 v
 github.tarball_from     releases
+revision                0
+
 distname                ${name}-v${version}
 
-maintainers             {@gpanders gpanders.com:greg} openmaintainer
+maintainers             {@gpanders gpanders.com:greg} \
+                        {gmail.com:herby.gillot @herbygillot} \
+                        openmaintainer
 categories              sysutils
 license                 GPL-3
 
@@ -30,16 +32,17 @@ depends_build-append    port:autoconf \
                         port:automake \
                         port:pkgconfig
 
-depends_lib-append      port:libuv \
-                        port:lz4 \
+depends_lib-append      lib:libuuid:libuuid \
+                        path:lib/pkgconfig/libuv.pc:libuv \
                         port:json-c \
-                        port:openssl \
                         port:judy \
-                        lib:libuuid:libuuid
+                        port:libyaml \
+                        port:lz4 \
+                        port:openssl
 
-checksums               rmd160  f029a3324d088ce7829e2363785c63beeab8fc82 \
-                        sha256  eeba8b18519a9123a3cc8b450dcd042e23a3b145a78a7017a14c47ed36d923df \
-                        size    6737320
+checksums               rmd160  f00653c4366164522bacca5efba6a2fe646e8cbe \
+                        sha256  77e94acf7085c23ab20b2d0d2d4d2bc5a289f121fc7aac5d0daffb960041fd95 \
+                        size    47466484
 
 configure.args          --disable-dependency-tracking \
                         --disable-silent-rules \
