--- a/R/R-antiword/Portfile
+++ b/R/R-antiword/Portfile
@@ -3,17 +3,17 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran ropensci antiword 1.3.2 v
+R.setup             cran ropensci antiword 1.3.3 v
 revision            0
 categories-append   office textproc
-maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
+maintainers         nomaintainer
 license             GPL-2
 description         Extract text from Microsoft Word Documents
 long_description    {*}${description}
 homepage            https://docs.ropensci.org/antiword
-checksums           rmd160  05a4e53f4c87555b48a49212032d51c78d92fece \
-                    sha256  9d91deec3b88084ff8c77b4a2122100fcfaa895f8bd062b69861867545763dfc \
-                    size    259144
+checksums           rmd160  9a75f3e20f559f333afde5f892dca4f46d505b2f \
+                    sha256  cea1b0c65abd708fca8e394fd899caa3bdd93ce81316ca53bf4bc346752983b1 \
+                    size    259133
 
 depends_lib-append  port:R-sys
 
