--- a/R/R-bayesplot/Portfile
+++ b/R/R-bayesplot/Portfile
@@ -3,17 +3,17 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github stan-dev bayesplot 1.10.0 v
-revision            1
-categories-append   math graphics
+R.setup             github stan-dev bayesplot 1.11.0 v
+revision            0
+categories-append   graphics math
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 license             GPL-3+
 description         Plotting for Bayesian Models
 long_description    {*}${description}
 homepage            https://mc-stan.org/bayesplot
-checksums           rmd160  a4c81d6ee05efc678b23cc35e1dd2eaf872e34ad \
-                    sha256  677f416e7dff525b4f2fb7dcddc3f597945dbef226f647ec0d90f6df6596d2e2 \
-                    size    10040215
+checksums           rmd160  4c612fd16f584de1fbc45d41c006f860d94e76f4 \
+                    sha256  a39ed9f7300a24f32b100b9c8c3c391b29a0bb45bb549b0f9194a73dfe451895 \
+                    size    10044989
 supported_archs     noarch
 
 depends_lib-append  port:R-dplyr \
