sqlite3: fix pointer size for ppc64

--- a/databases/sqlite3/Portfile
+++ b/databases/sqlite3/Portfile
@@ -6,9 +6,8 @@ PortGroup           clang_dependency 1.0
 name                sqlite3
 # don't forget to update the checksums for sqlite3-tools when updating sqlite3
 version             3.45.1
-revision            0
+revision            1
 categories          databases
-platforms           darwin
 license             public-domain
 
 maintainers         {mps @Schamschula} openmaintainer
@@ -42,12 +41,15 @@ if {${os.platform} eq "darwin" && ${os.major} < 11 && ${cxx_stdlib} eq "libc++"}
     clang_dependency.extra_versions 3.7
 }
 
+# Drop defines-ppc patches with 3.46.0: https://sqlite.org/forum/forumpost/fc4bfa307db74d04
 if {${subport} ne "${name}-tools"} {
     configure.checks.implicit_function_declaration.whitelist-append strchr
 
-    patchfiles      patch-sqlite3_fix-atomic-clang-4.diff
+    patchfiles      patch-sqlite3_fix-atomic-clang-4.diff \
+                    patch-sqlite3_fix-defines-ppc.diff
 } else {
-    patchfiles      patch-sqlite3-tools_fix-atomic-clang-4.diff
+    patchfiles      patch-sqlite3-tools_fix-atomic-clang-4.diff \
+                    patch-sqlite3-tools_fix-defines-ppc.diff
 }
 
 configure.args      --enable-threadsafe \
