R-matsbyname: update to 0.6.9

--- a/R/R-matsbyname/Portfile
+++ b/R/R-matsbyname/Portfile
@@ -3,16 +3,17 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github MatthewHeun matsbyname 0.6.8 v
+# Revert to GitHub once updated there.
+R.setup             cran MatthewHeun matsbyname 0.6.9 v
 revision            0
 categories-append   math
 maintainers         nomaintainer
 license             MIT
 description         Implementation of matrix mathematics
 long_description    {*}${description}
-checksums           rmd160  9220686f4579f36622eab7cecb3e0f12b203347e \
-                    sha256  f31814ca789e5c87eaa39e8b1a0191a05ba2c598526692e0ea9e8060c813db9c \
-                    size    14810140
+checksums           rmd160  8cdbb6fa6255f457acaa9f9340b4d82dcbf57d9d \
+                    sha256  3365f091df1c8790fda84f77b0570aa1c6e507701e284b3a3d969430ad3a720f \
+                    size    245634
 supported_archs     noarch
 
 depends_lib-append  port:R-assertthat \
