R-repana: update to 2.1.0

--- a/R/R-repana/Portfile
+++ b/R/R-repana/Portfile
@@ -3,16 +3,16 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran johnaponte repana 2.0.0
+R.setup             cran johnaponte repana 2.1.0
 revision            0
-maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
+maintainers         nomaintainer
 license             GPL-3+
 description         Repeatable Analysis in R
 long_description    {*}${description}
 homepage            https://johnaponte.github.io/repana
-checksums           rmd160  8e05c72a00a5de48317e2dbd8dacea0156df13f4 \
-                    sha256  5cef7b94813e2db2ab79d5c0961b346b80201db8008956eb95d6e5d28d79b05f \
-                    size    42511
+checksums           rmd160  4536483678b507cde329d82e446a7c11b6b09f49 \
+                    sha256  c36ae6bcd8d05a3f0c0433be50b949555aa94a611ffc6d43bd3ac9a4130dd787 \
+                    size    41818
 supported_archs     noarch
 
 depends_lib-append  port:R-config \
