py-notebook_shim: fix typo

--- a/python/py-notebook_shim/Portfile
+++ b/python/py-notebook_shim/Portfile
@@ -12,7 +12,7 @@ supported_archs     noarch
 platforms           {darwin any}
 
 python.versions     38 39 310 311 312
-python.pep517_backend   hatchling
+python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -26,7 +26,5 @@ checksums           rmd160  a77aef173296e932bb3c21f32e4ea61a08eb0b86 \
                     size    13082
 
 if {${name} ne ${subport}} {
-    depends_build-append \
-                        port:py${python.version}-hatchling
     depends_lib-append  port:py${python.version}-jupyter_server
 }
