--- a/python/py-jupyter_server_terminals/Portfile
+++ b/python/py-jupyter_server_terminals/Portfile
@@ -12,7 +12,7 @@ supported_archs     noarch
 platforms           {darwin any}
 
 python.versions     38 39 310 311 312
-python.pep517_backend   hatchling
+python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -26,7 +26,5 @@ checksums           rmd160  a6eabf8f47b34d6edc73118b485840f0a79bda3b \
                     size    31168
 
 if {${name} ne ${subport}} {
-    depends_build-append \
-                        port:py${python.version}-hatchling
     depends_lib-append  port:py${python.version}-terminado
 }
