--- a/python/py-prometheus_client/Portfile
+++ b/python/py-prometheus_client/Portfile
@@ -4,15 +4,14 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-prometheus_client
-version             0.17.1
+version             0.19.0
 revision            0
 categories-append   devel
 license             Apache-2
 platforms           {darwin any}
 supported_archs     noarch
 
-python.versions     37 38 39 310 311 312
-python.pep517       yes
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -21,6 +20,6 @@ long_description    {*}${description}
 
 homepage            https://github.com/prometheus/client_python
 
-checksums           rmd160  a91314dfb0eea5c589bdc8165b6214fb221357ee \
-                    sha256  21e674f39831ae3f8acde238afd9a27a37d0d2fb5a28ea094f0ce25d2cbf2091 \
-                    size    90360
+checksums           rmd160  11ad435781de3af3198ba6e524027dbaa545738c \
+                    sha256  4585b0d1223148c27a225b10dbec5ae9bc4c81a99a3fa80774fa6209935324e1 \
+                    size    77791
