openldap-devel: blacklist old Xcode gcc

--- a/databases/openldap-devel/Portfile
+++ b/databases/openldap-devel/Portfile
@@ -92,6 +92,10 @@ configure.args-append \
                     --with-fetch \
                     --with-tls
 
+# slap-config.h: error: redefinition of typedef ‘ConfigArgs’
+compiler.blacklist-append \
+                    *gcc-4.0 *gcc-4.2
+
 startupitem.create  yes
 startupitem.name    slapd
 startupitem.init    "PID=${prefix}/var/run/slapd.pid"
