--- a/lang/swi-prolog/Portfile
+++ b/lang/swi-prolog/Portfile
@@ -6,7 +6,7 @@ PortGroup           cmake 1.1
 name                swi-prolog
 conflicts           swi-prolog-devel
 epoch               20051223
-version             9.0.4
+version             9.2.0
 revision            0
 
 categories          lang
@@ -31,9 +31,9 @@ master_sites        https://www.swi-prolog.org/download/stable/src/
 distname            swipl-${version}
 dist_subdir         swi-prolog
 
-checksums           rmd160  8ef186348c85bcb5183f4fb93c653f607cb2133b \
-                    sha256  feb2815a51d34fa81cb34e8149830405935a7e1d1c1950461239750baa8b49f0 \
-                    size    11854471
+checksums           rmd160  ec64a2109b2848fae07a64224cf595c57adf5a14 \
+                    sha256  10d90b15734d14d0d7972dc11a3584defd300d65a9f0b1185821af8c3896da5e \
+                    size    12229508
 
 depends_build-append \
                     port:pkgconfig
@@ -53,7 +53,12 @@ depends_lib-append  port:db62 \
                     port:xorg-libXt \
                     port:xpm \
                     port:libyaml \
-                    port:zlib
+                    port:zlib \
+                    port:python312
+
+compiler.c_standard 2011
+compiler.cxx_standard 2017
+compiler.thread_local_storage yes
 
 configure.cmd       cmake
 cmake.generator     Ninja
@@ -61,13 +66,8 @@ configure.pre_args  -DCMAKE_INSTALL_PREFIX=${prefix} \
                     -DCMAKE_BUILD_TYPE=Release \
                     -DCMAKE_INCLUDE_PATH=${prefix}/include \
                     -DCMAKE_LIBRARY_PATH=/usr/lib:${prefix}/lib \
-                    -DSWIPL_PACKAGES_QT=OFF
-
-platform darwin 21 {
-    if {[vercmp ${version} 8.4.2] < 0} {
-        configure.args-append -DUSE_TCMALLOC=OFF
-    }
-}
+                    -DSWIPL_PACKAGES_QT=OFF \
+                    -DCPYTHON_VERSION="3.12\;EXACT"
 
 variant qt5 description {Add Qt5 GUI} {
     depends_lib-append          port:qt5-qtbase
