py-spaghetti: update to 1.7.5.post1; pin 1.7.4 for py39

--- a/python/py-spaghetti/Portfile
+++ b/python/py-spaghetti/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-spaghetti
-version             1.7.4
+version             1.7.5.post1
 revision            0
 
 categories-append   gis
@@ -20,16 +20,14 @@ long_description    The PySAL {*}${description} package is an open-source Python
 
 homepage            https://pysal.org/spaghetti/
 
-checksums           rmd160  092dd6c9e7abc9fcba7b03044a11124d828c6c9c \
-                    sha256  9898ea86744b6ced9923f8bc213964045615f31ce14f304d20db0aecca40728d \
-                    size    22151842
+checksums           rmd160  ab48d4d070edd4274c22c2151cb33a7a96f9b0ef \
+                    sha256  9acf19e3b4bf72f83604bc1d00113712cbb7db7bd94984883f5823a6fb1da607 \
+                    size    22156820
 
 python.versions     39 310 311
-python.pep517       yes
 
 if {${name} ne ${subport}} {
     depends_build-append \
-                    port:py${python.version}-setuptools \
                     port:py${python.version}-setuptools_scm
 
     depends_run-append \
@@ -39,4 +37,12 @@ if {${name} ne ${subport}} {
                     port:py${python.version}-pandas \
                     port:py${python.version}-rtree \
                     port:py${python.version}-scipy
+
+    if {${python.version} == 39} {
+        version     1.7.4
+        revision    0
+        checksums   rmd160  092dd6c9e7abc9fcba7b03044a11124d828c6c9c \
+                    sha256  9898ea86744b6ced9923f8bc213964045615f31ce14f304d20db0aecca40728d \
+                    size    22151842
+    }
 }
