cryfs: set compiler.thread_local_storage
Closes: https://trac.macports.org/ticket/69237

--- a/net/cryfs/Portfile
+++ b/net/cryfs/Portfile
@@ -7,7 +7,7 @@ PortGroup                 cmake 1.1
 PortGroup                 boost 1.0
 
 github.setup              cryfs cryfs 0.11.4
-revision                  0
+revision                  1
 github.tarball_from       releases
 
 license                   LGPL-3
@@ -51,6 +51,7 @@ cmake.build_type          Release
 universal_variant         no
 
 compiler.cxx_standard     2014
+compiler.thread_local_storage yes
 
 configure.args-append    -DBoost_USE_MULTITHREADED=on \
                          -DBoost_USE_STATIC_LIBS=off \
