curl: Only link with nghttp3 with +http3 variant
Closes: https://trac.macports.org/ticket/69251

--- a/net/curl/Portfile
+++ b/net/curl/Portfile
@@ -35,9 +35,9 @@ checksums-prepend               ${curl_distfile}
 if {${name} eq ${subport}} {
     PortGroup                   muniversal 1.0
 
-    revision                    0
+    revision                    1
 
-    depends_build               port:pkgconfig
+    depends_build               path:bin/pkg-config:pkgconfig
 
     depends_lib                 port:brotli \
                                 port:libidn2 \
@@ -56,6 +56,8 @@ if {${name} eq ${subport}} {
                                 --without-libssh2 \
                                 --without-mbedtls \
                                 --without-nghttp2 \
+                                --without-nghttp3 \
+                                --without-ngtcp2 \
                                 --without-openssl \
                                 --without-ssl \
                                 --without-secure-transport \
@@ -230,8 +232,8 @@ if {${name} eq ${subport}} {
     variant http3 requires gnutls description {Support HTTP/3 with nghttp3 and ngtcp2} {
         depends_lib-append      port:nghttp3 \
                                 port:ngtcp2
-        configure.args-append   --with-nghttp3=${prefix} \
-                                --with-ngtcp2=${prefix}
+        configure.args-replace  --without-nghttp3 --with-nghttp3=${prefix} \
+                                --without-ngtcp2 --with-ngtcp2=${prefix}
     }
 
     variant openldap description {Support performing Lightweight Directory Access Protocol queries with OpenLDAP} {
