php-zstd: Update to 0.13.3

--- a/php/php-zstd/Portfile
+++ b/php/php-zstd/Portfile
@@ -16,11 +16,11 @@ description         Zstandard compression
 long_description    This extension allows Zstandard compression from PHP
 
 if {[vercmp ${php.branch} >= 7.0]} {
-    github.setup    kjdev php-ext-zstd 0.13.2
+    github.setup    kjdev php-ext-zstd 0.13.3
     revision        0
-    checksums       rmd160  1b0155780f505d59d522ea19efc22e13239cf605 \
-                    sha256  b85ddcbd72855b17731f309877048f7f1e492ebd6d15eb44d140f6fb5096313d \
-                    size    21655
+    checksums       rmd160  0d731817627aec6fb5d60c1690ed06fdb3e83126 \
+                    sha256  547f84759c2177f4415ae4a5d5066f09d2979f06aa2b3b4b97b42c0990a1efc5 \
+                    size    21697
 } elseif {[vercmp ${php.branch} >= 5.2]} {
     github.setup    kjdev php-ext-zstd 0.11.0
     revision        0
@@ -31,6 +31,13 @@ if {[vercmp ${php.branch} >= 7.0]} {
 
 if {${name} ne ${subport}} {
     github.tarball_from     archive
+
+    if {[vercmp ${php.branch} >= 7.0]} {
+        # If APCu is present at build time, a zstd serializer for APCu will be built.
+        # https://github.com/kjdev/php-ext-zstd/issues/66
+        depends_build-append \
+                            port:${php}-APCu
+    }
 
     depends_lib-append      port:zstd
 
