tiledb: update to 2.19.1, fix building tests variant

--- a/databases/tiledb/Portfile
+++ b/databases/tiledb/Portfile
@@ -13,7 +13,7 @@ legacysupport.newest_darwin_requires_legacy 19
 # See discussion in: https://github.com/macports/macports-ports/pull/19686
 legacysupport.use_mp_libcxx yes
 
-github.setup        TileDB-Inc TileDB 2.19.0
+github.setup        TileDB-Inc TileDB 2.19.1
 name                tiledb
 revision            0
 categories          databases
@@ -22,9 +22,9 @@ maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 description         The universal storage engine
 long_description    {*}${description}
 homepage            https://tiledb.com
-checksums           rmd160  b2d4dc9dd9c3900c6b6690880afbbed3af39e06d \
-                    sha256  c607801c4ecda58005e84db3b8b1f72da0100a5b7e149601358b9a254afff962 \
-                    size    4386918
+checksums           rmd160  5090fbe9f0b49a499e3a1a313e49b5b25e58ca7e \
+                    sha256  b6a73b1b7d2ee5305f919d9f94883abc68e8c948257e22ce8771a72a22b46d95 \
+                    size    4386342
 github.tarball_from archive
 
 # Notice that 32-bit platforms are not supported by upstream, and there are reports elsewhere
@@ -70,6 +70,23 @@ if {${os.platform} eq "darwin" && ${os.major} < 20} {
     }
 }
 
+# This should be dropped with the next release.
+# Fixes here are either already in upstream/dev or to-become-irrelevant.
+patchfiles-append   patch-2.19.1.diff
+
+# https://github.com/TileDB-Inc/TileDB/pull/4690
+patchfiles-append   patch-random.diff
+
+# Verify if still broken in the next release. Relevant only for build with +tests:
+# https://github.com/TileDB-Inc/TileDB/issues/4590
+patchfiles-append   patch-unit_capi_error_tree.cc-temporary-fix.diff
+
+# Can be rewritten unconditionally, but no point in making a patch more complex:
+if {[string match *gcc* ${configure.compiler}] && ${configure.build_arch} in [arm i386 ppc]} {
+    patchfiles-append \
+                    patch-libatomic-32-bit.diff
+}
+
 compiler.cxx_standard       2020
 # https://github.com/TileDB-Inc/TileDB/issues/4566
 compiler.blacklist-append   {clang < 1400}
@@ -110,19 +127,27 @@ if {${build_arch} eq "i386" && [string match *clang* ${configure.compiler}]} {
 
 destroot.target     install-tiledb
 
+# FIXME: ppc32 tests build, but fail to pass. Possibly size of bool issue?
+# ppc64 tests are much better, though not clean. See above.
 variant tests description "Enable testing" {
-    PortGroup       conflicts_build 1.0
+    # This is needed only if a bundled Catch2 is used:
+    # PortGroup       conflicts_build 1.0
 
     if {${configure.build_arch} in [list i386 ppc]} {
         cmake.build_type    Debug
     }
 
-    # Use bundled catch2 due to regular breakages. See:
+    # This is a tricky part. We may need to switch between
+    # Macports-provided Catch2 and a bundled one. Related:
     # https://github.com/TileDB-Inc/TileDB/issues/4590
     # https://github.com/TileDB-Inc/TileDB/issues/4095
-    #    depends_build-append \
-    #                    port:catch2
-    conflicts_build catch2
+    depends_build-append \
+                    port:catch2
+    # As of 2.19.1, bundled one is broken:
+    # :info:build Undefined symbols:
+    # :info:build   "__ZN5Catch29formatReconstructedExpressionERSoRKSsNS_9StringRefES2_", referenced from:
+    # :info:build       __ZNK5Catch10BinaryExprIRKN9__gnu_cxx17__normal_iteratorIPiSt6vectorIiSaIiEEEES9_E29streamReconstructedExpressionERSo in test_assert.cc.o
+    # conflicts_build catch2
 
     configure.pre_args-replace \
                     -DCMAKE_BUILD_WITH_INSTALL_RPATH:BOOL=ON \
