--- a/science/ast/Portfile
+++ b/science/ast/Portfile
@@ -35,3 +35,6 @@ destroot.args-append    stardocsdir=${prefix}/share/docs \
                         starhelpdir=${prefix}/share/help \
                         starnewsdir=${prefix}/share/news \
                         STAR_MANIFEST_DIR=${prefix}/share/manifests
+
+# yamlchan.c: error: 'for' loop initial declaration used outside C99 mode
+configure.cflags-append -std=c99
