R-HH: update to 3.1-51

--- a/R/R-HH/Portfile
+++ b/R/R-HH/Portfile
@@ -3,15 +3,15 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran cran HH 3.1-49
-revision            1
+R.setup             cran rmh HH 3.1-51
+revision            0
 maintainers         nomaintainer
-license             GPL-3+
+license             GPL-2+
 description         Statistical Analysis and Data Display, Heiberger and Holland
 long_description    {*}${description}
-checksums           rmd160  e1a70928603e5cb2e7cc2e639a090637bc691e9d \
-                    sha256  12cef0cb0a07c745026d925aee2970913e1f3f0705a58bc2741bf4940c80b87b \
-                    size    703247
+checksums           rmd160  ddc19fb1162924b2b2be6589c196718b0d69c225 \
+                    sha256  39088a94f3a2b47cb938649534fcaa3a1829171cc4a8d214a9aa7be782c40c53 \
+                    size    699545
 supported_archs     noarch
 
 depends_lib-append  port:R-abind \
