R-terra: update to 1.7-71

--- a/R/R-terra/Portfile
+++ b/R/R-terra/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             cran rspatial terra 1.7-65
+R.setup             cran rspatial terra 1.7-71
 revision            0
 categories-append   gis
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -11,9 +11,9 @@ license             GPL-3+
 description         Spatial data analysis
 long_description    {*}${description}
 homepage            https://rspatial.org/terra
-checksums           rmd160  59268948755d5411d2d9f264e72c45f622ef6237 \
-                    sha256  d4cd9f69ba47fea641b566b39e62585a62d0190966a9a9010e341a8aaa2a3a55 \
-                    size    829865
+checksums           rmd160  36952f2b9b40264d2a90e0d9652ff51621e52d54 \
+                    sha256  1db7f3af66e5dd8b63fb24bde737228c25c7b97a1d40b0597ff4ce1c4b3b0437 \
+                    size    836573
 
 set proj_v          proj9
 
@@ -28,14 +28,12 @@ depends_lib-append  path:lib/${proj_v}/lib/pkgconfig/proj.pc:${proj_v} \
 compiler.cxx_standard 2017
 
 # configure fails to do its job: https://github.com/r-spatial/sf/issues/2292
-destroot.env-append CPPFLAGS=-I${prefix}/lib/${proj_v}/include
+build.env-append    CPPFLAGS=-I${prefix}/lib/${proj_v}/include
 
-destroot.pre_args-append \
-                    --configure-args=' \
-                        --with-proj-include=${prefix}/lib/${proj_v}/include \
+build.pre_args-append \
+                    --configure-args="--with-proj-include=${prefix}/lib/${proj_v}/include \
                         --with-proj-lib=${prefix}/lib/${proj_v}/lib \
-                        --with-proj-share=${prefix}/lib/${proj_v}/share/proj \
-                        '
+                        --with-proj-share=${prefix}/lib/${proj_v}/share/proj"
 
 depends_test-append port:R-deldir \
                     port:R-htmlwidgets \
