bitcoin: fix build on macOS < 10.13

--- a/finance/bitcoin/Portfile
+++ b/finance/bitcoin/Portfile
@@ -57,6 +57,13 @@ configure.args          --disable-ccache \
 
 compiler.cxx_standard   2017
 
+# pool.h:161:27: error: aligned allocation function
+# of type 'void *(std::size_t, std::align_val_t)'
+# is only available on macOS 10.13 or newer
+if {${os.platform} eq "darwin" && ${os.major} < 17} {
+    configure.cxxflags-append -fno-aligned-allocation
+}
+
 configure.args-append   --with-daemon=no
 configure.args-append   --with-gui=no
 configure.args-append   --enable-wallet=no
