R packages: switch from destroot.args to build.args following changes in R PG

--- a/R/R-RPostgreSQL/Portfile
+++ b/R/R-RPostgreSQL/Portfile
@@ -19,6 +19,6 @@ set pgsql           postgresql15
 depends_lib-append  port:${pgsql} \
                     port:R-DBI
 
-destroot.env-append PG_CONFIG=${prefix}/lib/${pgsql}/bin/pg_config
+build.env-append    PG_CONFIG=${prefix}/lib/${pgsql}/bin/pg_config
 
 test.run            no
