--- a/R/R-Rhdf5lib/Portfile
+++ b/R/R-Rhdf5lib/Portfile
@@ -24,10 +24,8 @@ platform darwin 10 powerpc {
         reinplace "s,@BUILD@,powerpc-apple-darwin10,g" ${worksrcpath}/src/Makevars.in
     }
 
-    destroot.pre_args-append \
-                    --configure-args=' \
-                        --build=powerpc-apple-darwin10 \
-                        '
+    build.args-append \
+                    --configure-args="--build=powerpc-apple-darwin10"
 }
 
 depends_test-append port:R-BiocStyle \
