--- a/R/R-gdalBindings/Portfile
+++ b/R/R-gdalBindings/Portfile
@@ -20,5 +20,4 @@ depends_lib-append  port:gdal \
                     port:R-R6 \
                     port:R-Rcpp
 
-destroot.pre_args-append \
-                    --configure-args='--with-gdal=${prefix}/bin/gdal-config'
+build.args-append   --configure-args="--with-gdal=${prefix}/bin/gdal-config"
