--- a/R/R-nanonext/Portfile
+++ b/R/R-nanonext/Portfile
@@ -32,7 +32,7 @@ post-patch {
     reinplace "s,@PREFIX@,${prefix},g" ${worksrcpath}/configure
 }
 
-destroot.env-append CC=${configure.cc} CXX=${configure.cxx}
+build.env-append    CC=${configure.cc} CXX=${configure.cxx}
 
 depends_test-append port:R-knitr \
                     port:R-markdown
