--- a/R/R-terra/Portfile
+++ b/R/R-terra/Portfile
@@ -30,8 +30,7 @@ compiler.cxx_standard 2017
 # configure fails to do its job: https://github.com/r-spatial/sf/issues/2292
 build.env-append    CPPFLAGS=-I${prefix}/lib/${proj_v}/include
 
-build.pre_args-append \
-                    --configure-args="--with-proj-include=${prefix}/lib/${proj_v}/include \
+build.args-append   --configure-args="--with-proj-include=${prefix}/lib/${proj_v}/include \
                         --with-proj-lib=${prefix}/lib/${proj_v}/lib \
                         --with-proj-share=${prefix}/lib/${proj_v}/share/proj"
 
