--- a/R/R-proj4/Portfile
+++ b/R/R-proj4/Portfile
@@ -21,4 +21,4 @@ depends_build-append \
                     port:pkgconfig
 depends_lib-append  path:lib/${proj_v}/lib/pkgconfig/proj.pc:${proj_v}
 
-destroot.env-append PKG_CONFIG_PATH=${prefix}/lib/${proj_v}/lib/pkgconfig
+build.env-append    PKG_CONFIG_PATH=${prefix}/lib/${proj_v}/lib/pkgconfig
