swi-prolog-devel: Updated to version 9.3.0

--- a/lang/swi-prolog-devel/Portfile
+++ b/lang/swi-prolog-devel/Portfile
@@ -6,13 +6,13 @@ PortGroup           cmake 1.1
 name                swi-prolog-devel
 conflicts           swi-prolog
 epoch               20051223
-version             9.1.22
+version             9.3.0
 revision            0
 
 categories          lang
 universal_variant   no
 license             BSD
-maintainers         {cwi.nl:J.Wielemaker @JanWielemaker} openmaintainer
+maintainers         {swi-prolog.org:jan @JanWielemaker} openmaintainer
 
 description         SWI-Prolog compiler plus extra packages (development version)
 long_description    ISO/Edinburgh-style Prolog compiler including modules, \
@@ -31,9 +31,9 @@ master_sites        https://www.swi-prolog.org/download/devel/src/
 distname            swipl-${version}
 dist_subdir         swi-prolog
 
-checksums           rmd160  dceba93be533f876b57c1f191abf2c5f035056df \
-                    sha256  a6b765e9ae1cf19abee20e51c0020b0832a511b59f37f8f359393ef9721b7b67 \
-                    size    12220584
+checksums           rmd160  b9a58864956dcb07efaf78ba68d7db33530e511c \
+                    sha256  65620c74927002431fcf5baa34e1fe7ef7264381d72d274efc5f00c1c69cdd23 \
+                    size    12229556
 
 depends_build-append \
                     port:pkgconfig
