py-pygments: update to 2.17.2

--- a/python/py-pygments/Portfile
+++ b/python/py-pygments/Portfile
@@ -6,15 +6,15 @@ PortGroup           select 1.0
 
 name                py-pygments
 python.rootname     Pygments
-version             2.15.1
+version             2.17.2
 revision            0
 categories-append   devel
 license             BSD
 supported_archs     noarch
 platforms           {darwin any}
 
-python.versions     27 35 36 37 38 39 310 311 312
-python.pep517       yes
+python.versions     27 37 38 39 310 311 312
+python.pep517_backend   hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -26,15 +26,17 @@ long_description \
     languages: Python, Ruby, PHP, HTML etc. Outputs arbitrarily-styled \
     HTML or LaTeX, comes with many builtin styles.
 
-homepage            http://pygments.org/
+homepage            https://pygments.org/
 
-checksums           rmd160  b14bd1bf60d97f7ec1625b927167744d89b9fcb8 \
-                    sha256  8ace4d3c1dd481894b2005f560ead0f9f19ee64fe983366be1a21e171d12775c \
-                    size    4819591
+checksums           rmd160  24e98871a0006d0191e0b75e2d9bab76894a5726 \
+                    sha256  da46cec9fd2de5be3a8a784f434e4c4ab670b4ff54d605c4c2717e9d49c4c367 \
+                    size    4827772
+
+distname            pygments-${version}
 
 if {${name} ne ${subport}} {
 
-    if {${python.version} < 36} {
+    if {${python.version} eq 27} {
         version             2.5.2
         revision            0
         distname            ${python.rootname}-${version}
@@ -42,17 +44,12 @@ if {${name} ne ${subport}} {
                             sha256  98c8aa5a9f778fcd1026a17361ddaf7330d1b7c62ae97c3bb0ae73e0b9b6b0fe \
                             size    20263984
         python.pep517       no
-    } elseif {${python.version} eq 36} {
-        version             2.14.0
-        revision            0
-        distname            ${python.rootname}-${version}
-        checksums           rmd160  ef3c29232ca28084efc5be0a1e93ed1ae56cd7c6 \
-                            sha256  b3ed06a9e8ac9a9aae5a6f5dbe78a8a58655d17b43b93c078f094ddc476ae297 \
-                            size    4434562
-        python.pep517       no
+        depends_lib-append  port:py${python.version}-setuptools
     }
 
-    depends_lib-append  port:py${python.version}-setuptools
+    if {${python.version} eq 37} {
+        depends_run-append  port:py${python.version}-importlib-metadata
+    }
 
     depends_run-append  port:pygments_select
 
