--- a/python/py-scikit-learn/Portfile
+++ b/python/py-scikit-learn/Portfile
@@ -5,7 +5,7 @@ PortGroup           python 1.0
 PortGroup           compiler_wrapper 1.0
 
 name                py-scikit-learn
-version             1.2.2
+version             1.4.0
 revision            0
 categories-append   science
 license             BSD
@@ -24,19 +24,26 @@ long_description    Scikit-learn integrates machine learning algorithms \
 
 homepage            https://scikit-learn.org/
 
-checksums           rmd160  92664f8b16d4c531c1b8f13a486a1cae4a43a0aa \
-                    sha256  8429aea30ec24e7a8c7ed8a3fa6213adf3814a6efbea09e16e0a0c71e1a1a3d7 \
-                    size    7269934
+checksums           rmd160  e57fdc4df798cbf7f16839f13f22a1c8d329d6b5 \
+                    sha256  d4373c984eba20e393216edd51a3e3eede56cbe93d4247516d205643c3b93121 \
+                    size    7706781
 
 if {${name} ne ${subport}} {
     depends_build-append \
-                        port:py${python.version}-setuptools \
                         path:bin/cython-${python.branch}:py${python.version}-cython
 
     depends_lib-append  port:py${python.version}-numpy \
                         port:py${python.version}-scipy \
                         port:py${python.version}-joblib \
                         port:py${python.version}-threadpoolctl
+
+    if {${python.version} == 38} {
+        version             1.3.2
+        revision            0
+        checksums           rmd160  3f496523de9ba2f515836b92f4d8ca94375ba625 \
+                            sha256  a2f54c76accc15a34bfb9066e6c7a56c1e7235dda5762b990792330b52ccfb05 \
+                            size    7510251
+    }
 
     compiler.openmp_version 2.5
     depends_lib-append  port:libomp
