tiledb: non-functional: fix portfile parsing

--- a/databases/tiledb/Portfile
+++ b/databases/tiledb/Portfile
@@ -82,7 +82,7 @@ patchfiles-append   patch-random.diff
 patchfiles-append   patch-unit_capi_error_tree.cc-temporary-fix.diff
 
 # Can be rewritten unconditionally, but no point in making a patch more complex:
-if {[string match *gcc* ${configure.compiler}] && ${configure.build_arch} in [arm i386 ppc]} {
+if {[string match *gcc* ${configure.compiler}] && ${configure.build_arch} in [list arm i386 ppc]} {
     patchfiles-append \
                     patch-libatomic-32-bit.diff
 }
