napari: update to 0.4.19

--- a/science/napari/Portfile
+++ b/science/napari/Portfile
@@ -5,7 +5,7 @@ PortGroup           app 1.0
 PortGroup           python 1.0
 
 name                napari
-version             0.4.19rc7
+version             0.4.19
 revision            0
 categories-prepend  science
 license             BSD
@@ -19,9 +19,9 @@ long_description    {*}${description} It's designed for browsing, annotating, an
 supported_archs     noarch
 homepage            https://github.com/napari/napari
 
-checksums           rmd160  ada82ae8783294f50f3ffb2f8af667abf943ec48 \
-                    sha256  d3c3c936481e1cf9d4cd351a1dedd466be2d629ffdeffe753fa8f11cde389093 \
-                    size    10593232
+checksums           rmd160  a8d88071df93a21a098296128c767cbddca03fd5 \
+                    sha256  083468ebbdb3e91c6bba6ed60bc75747adcba622376caf8a1a6490378cea0f6d \
+                    size    10630645
 
 variant python38 conflicts python39 python310 python311 python312 description {Use Python 3.8} {}
 variant python39 conflicts python38 python310 python311 python312 description {Use Python 3.9} {}
