pika: update to 0.22.1, fix older x86 builds
Fixes two issues for some pre-Catalina Intel systems:
Configure breakage due to -nostdinc++ flag: https://trac.macports.org/ticket/67446
And lack of support for aligned allocation in libc++.
It also adds a forgotten PG for backlists to work.

--- a/devel/pika/Portfile
+++ b/devel/pika/Portfile
@@ -3,6 +3,7 @@
 PortSystem          1.0
 PortGroup           boost 1.0
 PortGroup           cmake 1.1
+PortGroup           compiler_blacklist_versions 1.0
 PortGroup           github 1.0
 PortGroup           legacysupport 1.1
 PortGroup           mpi 1.0
@@ -12,7 +13,7 @@ PortGroup           mpi 1.0
 legacysupport.use_mp_libcxx                 yes
 legacysupport.newest_darwin_requires_legacy 18
 
-github.setup        pika-org pika 0.22.0
+github.setup        pika-org pika 0.22.1
 revision            0
 categories          devel parallel
 license             Boost-1
@@ -20,9 +21,9 @@ maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 description         C++ library for concurrency and parallelism
 long_description    pika is a C++ library for concurrency and parallelism. \
                     It implements senders/receivers for CPU thread pools, MPI and CUDA.
-checksums           rmd160  7a55616ff24a4ec4e6443db7a6e4612ae7f9e92c \
-                    sha256  75f8932f3a233958c69802b483335eeeb39032ea66f12442f6f77048e259bdea \
-                    size    1065425
+checksums           rmd160  7facf6e6d64806d0ae11c53d920f599ad9916259 \
+                    sha256  b0de0649bee336847622f97b59b34a80cb3cfd9a931bbdb38299bc4904f19b92 \
+                    size    1063278
 github.tarball_from archive
 
 # Prefer a version with libcontext working across all archs (ppc64 is still not fixed):
@@ -79,6 +80,14 @@ platform powerpc {
         # Remove this once Boost libcontext is fixed for ppc64:
         configure.args-append \
                     -DPIKA_WITH_GENERIC_CONTEXT_COROUTINES=OFF
+    }
+}
+
+if {${os.platform} eq "darwin" && ${os.major} < 19} {
+    if {[string match macports-clang* ${configure.compiler}]} {
+        configure.cxxflags-append \
+                    -fno-aligned-allocation \
+                    -Wno-error=unused-command-line-argument
     }
 }
 
