--- a/databases/openldap-devel/Portfile
+++ b/databases/openldap-devel/Portfile
@@ -1,6 +1,7 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
+PortGroup           compiler_blacklist_versions 1.0
 PortGroup           muniversal 1.0
 PortGroup           legacysupport 1.1
 
@@ -94,7 +95,7 @@ configure.args-append \
 
 # slap-config.h: error: redefinition of typedef ‘ConfigArgs’
 compiler.blacklist-append \
-                    *gcc-4.0 *gcc-4.2
+                    *gcc-4.0 *gcc-4.2 {clang < 421}
 
 startupitem.create  yes
 startupitem.name    slapd
