--- a/devel/re2/Portfile
+++ b/devel/re2/Portfile
@@ -1,18 +1,18 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           cmake 1.1
-PortGroup           github 1.0
-PortGroup           legacysupport 1.1
+PortGroup           cmake           1.1
+PortGroup           github          1.0
+PortGroup           legacysupport   1.1
 
-github.setup        google re2 2023-09-01
+github.setup        google re2 2024-02-01
 github.tarball_from archive
 epoch               1
-revision            2
+revision            0
 
-checksums           rmd160 713ac6a5a640b0820f2d10528b0b52675de55780 \
-                    sha256 5bb6875ae1cd1e9fedde98018c346db7260655f86fdb8837e3075103acd3649b \
-                    size   396555
+checksums           rmd160 5b800960365e3d616d289cd71ad2a3662e7f8bd0 \
+                    sha256 cd191a311b84fcf37310e5cd876845b4bf5aee76fdd755008eef3b6478ce07bb \
+                    size   388424
 
 categories          devel textproc
 maintainers         {gmail.com:herby.gillot @herbygillot} \
@@ -47,6 +47,6 @@ post-destroot {
     set docdir ${prefix}/share/doc/re2
     xinstall -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} \
-        AUTHORS CONTRIBUTORS LICENSE README doc/syntax.html doc/syntax.txt \
+        LICENSE README doc/syntax.html doc/syntax.txt \
         ${destroot}${docdir}
 }
