py-geopandas: fix livecheck

--- a/python/py-geopandas/Portfile
+++ b/python/py-geopandas/Portfile
@@ -33,11 +33,13 @@ if {${name} ne ${subport}} {
                         port:py${python.version}-pyproj \
                         port:py${python.version}-packaging
 
-    if {${python.version} == 38} {
+    if {${python.version} eq 38} {
         version         0.13.2
         revision        0
         checksums       rmd160  0e23b5bc624f07074a7bd5fc1e715e84da72607b \
                         sha256  e5b56d9c20800c77bcc0c914db3f27447a37b23b2cd892be543f5001a694a968 \
                         size    1091231
     }
+
+    livecheck.type      none
 }
