py-scikit-learn: fix livecheck

--- a/python/py-scikit-learn/Portfile
+++ b/python/py-scikit-learn/Portfile
@@ -37,7 +37,7 @@ if {${name} ne ${subport}} {
                         port:py${python.version}-joblib \
                         port:py${python.version}-threadpoolctl
 
-    if {${python.version} == 38} {
+    if {${python.version} eq 38} {
         version             1.3.2
         revision            0
         checksums           rmd160  3f496523de9ba2f515836b92f4d8ca94375ba625 \
@@ -62,4 +62,6 @@ if {${name} ne ${subport}} {
                         "CXXFLAGS=${configure.cxx_archflags} -I${prefix}/include/libomp" \
                         "LDFLAGS=${configure.ld_archflags} -L${prefix}/lib/libomp -lomp" \
                         DYLD_LIBRARY_PATH=${prefix}/lib/libomp
+
+    livecheck.type      none
 }
