--- a/python/py-quantecon/Portfile
+++ b/python/py-quantecon/Portfile
@@ -37,3 +37,5 @@ if {${name} ne ${subport}} {
                     port:py${python.version}-scipy \
                     port:py${python.version}-sympy
 }
+
+test.run            yes
