py-threadpoolctl: add py312; drop py37; enable tests

--- a/python/py-threadpoolctl/Portfile
+++ b/python/py-threadpoolctl/Portfile
@@ -11,7 +11,7 @@ supported_archs     noarch
 platforms           {darwin any}
 license             BSD
 
-python.versions     37 38 39 310 311
+python.versions     38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -24,9 +24,8 @@ checksums           rmd160  bc71e6ea121d307c1dcc2619ee2763a945838817 \
                     sha256  c96a0ba3bdddeaca37dc4cc7344aafad41cdb8c313f74fdfe387a867bba93355 \
                     size    36266
 
-python.pep517       yes
+patchfiles-append patch-test.diff
+
 python.pep517_backend   flit
 
-if {${name} ne ${subport}} {
-    livecheck.type      none
-}
+test.run  yes
