igraph: update to 0.10.9

--- a/math/igraph/Portfile
+++ b/math/igraph/Portfile
@@ -5,8 +5,8 @@ PortGroup           cmake 1.1
 PortGroup           github 1.0
 PortGroup           linear_algebra 1.0
 
-github.setup        igraph igraph 0.10.8
-revision            1
+github.setup        igraph igraph 0.10.9
+revision            0
 github.tarball_from releases
 
 categories          math science devel
@@ -23,15 +23,15 @@ depends_lib         port:arpack \
                     port:gmp \
                     port:libxml2
 
-checksums           rmd160  e0ecde131e6073704f57ecce2029e0b441c9e6f5 \
-                    sha256  ac5fa94ae6fd1eace651e4b235e99c056479a5c5d0d641aed30240ac33b19403 \
-                    size    4326926
+checksums           rmd160  d2575f547159fcd869f3da7c8c9976c4239844c8 \
+                    sha256  cade6db7edbd7b6f715706c88ac51cb95dd27512ce5bdc736dcdcb2efcacb5cc \
+                    size    4335309
 
 # Testing notes:
 #
 # There is a bug in macOS 13.x to 14.0 that will cause the safelocale test to fail.
 # See https://stackoverflow.com/q/76133503/695132 and https://github.com/igraph/igraph/issues/2340
-# This _should_ be fixed in macOS 14.1.
+# This is fixed in macOS 14.1.
 test.run            yes
 test.target         check
 
