octave-data-smoothing: set platforms any

--- a/octave/octave-data-smoothing/Portfile
+++ b/octave/octave-data-smoothing/Portfile
@@ -5,11 +5,11 @@ PortGroup           octave 1.0
 
 octave.setup        data-smoothing 1.3.0
 revision            5
-platforms           darwin
+platforms           any
 license             GPL-3+
 maintainers         nomaintainer
 description         Algorithms for smoothing noisy data.
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  40fe5723f811dbd8238a27736ccb25af50bb4186 \
                     sha256  012bd7a9681619ed33d8643f3785ba9b17a82febab9b242674fe79746bc31b60 \
