octave-dataframe: set platforms any

--- a/octave/octave-dataframe/Portfile
+++ b/octave/octave-dataframe/Portfile
@@ -5,11 +5,11 @@ PortGroup           octave 1.0
 
 octave.setup        dataframe 1.2.0
 revision            4
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         Data manipulation toolbox similar to R data.frame.
-long_description    ${description}
+long_description    {*}${description}
 
 checksums           rmd160  c4b89e0699f1dee6d2c603dc75a9abb3b2baa54f \
                     sha256  5d36b296b3854f3d7ccb8c59037ca9952c24ef3f1ba7dd776967cd4710505981 \
