octave-doctest: set platforms any

--- a/octave/octave-doctest/Portfile
+++ b/octave/octave-doctest/Portfile
@@ -5,7 +5,7 @@ PortGroup           octave 1.0
 
 octave.setup        doctest 0.8.0
 revision            0
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         The Doctest package finds specially-formatted blocks of example \
