octave-fuzzy-logic-toolkit: set platforms any

--- a/octave/octave-fuzzy-logic-toolkit/Portfile
+++ b/octave/octave-fuzzy-logic-toolkit/Portfile
@@ -5,7 +5,7 @@ PortGroup           octave 1.0
 
 octave.setup        fuzzy-logic-toolkit 0.4.6
 revision            0
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         {mps @Schamschula} openmaintainer
 description         A mostly MATLAB-compatible fuzzy logic toolkit for Octave.
