--- a/octave/octave-ga/Portfile
+++ b/octave/octave-ga/Portfile
@@ -5,7 +5,7 @@ PortGroup           octave 1.0
 
 octave.setup        ga 0.10.3
 revision            0
-platforms           darwin
+platforms           any
 license             GPL-2+
 maintainers         nomaintainer
 description         Genetic optimization code.
