lnav-devel: new port (version 0.12.0-beta1)

--- a/sysutils/lnav/Portfile
+++ b/sysutils/lnav/Portfile
@@ -4,9 +4,7 @@ PortSystem          1.0
 PortGroup           github          1.0
 PortGroup           legacysupport   1.1
 
-github.setup        tstack lnav 0.11.2 v
-github.tarball_from archive
-revision            1
+name                lnav
 
 homepage            https://lnav.org
 
@@ -24,9 +22,36 @@ license             BSD
 maintainers         {gmail.com:herby.gillot @herbygillot} \
                     openmaintainer
 
-checksums           rmd160  29e795873cab2b113c0e2046cfd30f91c9f06bd4 \
-                    sha256  03b72fd02faccdbf98fcdeba62306794b677b8bcf49d6023117808f88ed627dc \
-                    size    12379373
+subport ${name}-devel {}
+
+if {${name} eq ${subport}} {
+    # Main Port
+    github.setup        tstack lnav 0.11.2 v
+    github.tarball_from archive
+    revision            1
+
+    conflicts           lnav-devel
+
+    checksums           ${distname}${extract.suffix} \
+                        rmd160  29e795873cab2b113c0e2046cfd30f91c9f06bd4 \
+                        sha256  03b72fd02faccdbf98fcdeba62306794b677b8bcf49d6023117808f88ed627dc \
+                        size    12379373
+
+    github.livecheck.regex {([0-9.]+)}
+
+} else {
+    # Devel
+    github.setup        tstack lnav 0.12.0-beta1 v
+    github.tarball_from archive
+    revision            0
+
+    conflicts           lnav
+
+    checksums           ${distname}${extract.suffix} \
+                        rmd160  b0eb0c929a7bb53310737f963addda5ccc072fdf \
+                        sha256  473bb32ca1f32904a9c64eeec8a8f6068ca15e4cafcd9e407c4d210b52fe1a8b \
+                        size    17996478
+}
 
 depends_lib-append  path:lib/libssl.dylib:openssl \
                     port:bzip2 \
@@ -52,5 +77,3 @@ configure.args-append \
                     --with-sqlite3
 
 use_autoreconf      yes
-
-github.livecheck.regex {([0-9.]+)}
