py-{multiprocess,pyasdf,tensorflow-datasets}: drop py37 subport

--- a/python/py-multiprocess/Portfile
+++ b/python/py-multiprocess/Portfile
@@ -21,12 +21,9 @@ checksums           rmd160  6e3dd8fcbac45747e71126a1ea783ed1a2537078 \
                     sha256  206bb9b97b73f87fec1ed15a19f8762950256aa84225450abc7150d02855a083 \
                     size    3308461
 
-python.versions     37 38 39 310 311
+python.versions     38 39 310 311
 
 if {${name} ne ${subport}} {
-    depends_build-append \
-                    port:py${python.version}-setuptools
-
     depends_lib-append \
                     port:py${python.version}-dill
 }
