py-thinc: drop py37 subport

--- a/python/py-thinc/Portfile
+++ b/python/py-thinc/Portfile
@@ -28,7 +28,7 @@ long_description    {*}${description}
 github.livecheck.regex {([0-9.]+)}
 
 # Support python versions
-python.versions     37 38 39 310 311 312
+python.versions     38 39 310 311 312
 
 # Compiler selection
 compiler.cxx_standard 2011
@@ -40,8 +40,6 @@ if {${name} ne ${subport}} {
                     patch-pyproject_toml.diff \
                     patch-requirements_txt.diff \
                     patch-setup_cfg.diff
-
-    python.pep517   yes
 
     depends_build-append \
                     port:py${python.version}-cython-compat
